Добавляет свайпер на все ширины

--- a/source/index.html
+++ b/source/index.html
@@ -561,20 +561,20 @@
         <div class="container news__container">
           <h2>Новости и материалы</h2>
           <div class="news__tab-list-container">
-            <ul class="news__tab-list">
-              <li class="news__tab-item is-active">
+            <ul class="news__tab-list" data-news="news-titles">
+              <li class="news__tab-item is-active" data-news="news-title">
                 <p>Общее</p>
               </li>
-              <li class="news__tab-item">
+              <li class="news__tab-item" data-news="news-title">
                 <p>Волонтёрство</p>
               </li>
-              <li class="news__tab-item">
+              <li class="news__tab-item" data-news="news-title">
                 <p>Стажировки</p>
               </li>
-              <li class="news__tab-item">
+              <li class="news__tab-item" data-news="news-title">
                 <p>Карьера</p>
               </li>
-              <li class="news__tab-item">
+              <li class="news__tab-item" data-news="news-title">
                 <p>Путешествия</p>
               </li>
             </ul>
@@ -620,7 +620,7 @@
                       srcset="img/news/sea-desktop.webp 1x, img/news/sea-desktop@2x.webp 2x" width="" height="">
                     <source type="image/webp" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.webp 1x, img/news/sea-tablet@2x.webp 2x" width="" height="">
-                    <source type="image/webp" srcset="img/news/sea-mobile.webp 1x, img/news/persons-mobile@2x.webp 2x"
+                    <source type="image/webp" srcset="img/news/sea-mobile.webp 1x, img/news/sea-mobile@2x.webp 2x"
                       width="" height="">
                     <source type="image/jpeg" media="(min-width: 1440px)"
                       srcset="img/news/sea-desktop.jpg 1x, img/news/sea-desktop@2x.jpg 2x" width="" height="">
