--- a/source/index.html
+++ b/source/index.html
@@ -1302,24 +1302,32 @@
               <h2>Напишите нам</h2>
               <p>Оставьте ваши контакты, если у вас остались вопросы — мы на них ответим!</p>
               <form class="feedback__form" action="#" method="post">
-                <label>
-                  Имя
+                <label class="feedback__form-label">
+                  <span>
+                    Имя
+                  </span>
                   <input type="text" name="name" id="name">
                 </label>
-                <label>
-                  Телефон
+                <label class="feedback__form-label">
+                  <span>
+                    Телефон
+                  </span>
                   <input type="tel" name="tel" id="tel">
                 </label>
-                <label>
-                  Ваше сообщение
+                <label class="feedback__form-label">
+                  <span>
+                    Ваше сообщение
+                  </span>
                   <textarea name="message" id="message"></textarea>
                 </label>
 
-                <label>
-                  Выберите город
+                <label class="feedback__form-label">
+                  <span>
+                    Выберите город
+                  </span>
                   <div class="custom-select" data-select>
                     <span class="custom-select__label"></span>
-                    <span class="custom-select__error">some-error</span>
+                    <span class="custom-select__error"></span>
                     <span class="custom-select__placeholder"></span>
                     <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
                       <span class="custom-select__text"></span>
@@ -1330,19 +1338,25 @@
                       </span>
                     </button>
                     <ul class="custom-select__list">
-                      <li class="custom-select__item active" tabindex="0" data-select-value="id-1"></li>
+                      <!-- <li class="custom-select__item active" tabindex="0" data-select-value="id-1"></li> -->
+                      <li class="custom-select__item" tabindex="0" data-select-value="id-1">Санкт-Петербург</li>
                       <li class="custom-select__item" tabindex="0" data-select-value="id-2">Санкт-Петербург</li>
                       <li class="custom-select__item" tabindex="0" data-select-value="id-3">Санкт-Петербург</li>
                       <li class="custom-select__item" tabindex="0" data-select-value="id-4">Санкт-Петербург</li>
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-5">Санкт-Петербург</li>
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-6">Санкт-Петербург</li>
                     </ul>
                   </div>
                 </label>
 
-                <label>
-                  <input type="checkbox" name="agree" id="agree" checked>
-                  Я согласен на обработку моих персональных данных
+                <label class="feedback__form-label feedback__form-label--checkbox">
+                  <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
+                  <div class="feedback__custom-checkbox">
+                    <svg width="10" height="10">
+                      <use href="__spritemap#sprite-check"></use>
+                    </svg>
+                  </div>
+                  <span>
+                    Я согласен на обработку моих персональных данных
+                  </span>
                 </label>
                 <button class="feedback__form-button btn" type="submit">
                   Отправить
