Убирает полосу прокрутки в блоке news

--- a/source/index.html
+++ b/source/index.html
@@ -1359,7 +1359,7 @@
                   </span>
                 </label>
                 <button class="feedback__form-button btn" type="submit">
-                  Отправить
+                  <span>Отправить</span>
                   <div class="feedback__btn-wrapper btn__wrapper btn__wrapper--invert">
                     <svg width="10" height="10">
                       <use href="__spritemap#sprite-arrow-up"></use>
