--- a/source/index.html
+++ b/source/index.html
@@ -1301,72 +1301,77 @@
             <div class="feedback__form-container">
               <h2>Напишите нам</h2>
               <p>Оставьте ваши контакты, если у вас остались вопросы — мы на них ответим!</p>
-              <form class="feedback__form" action="#" method="post">
-                <label class="feedback__form-label">
-                  <span>
-                    Имя
-                  </span>
-                  <input type="text" name="name" id="name">
-                </label>
-                <label class="feedback__form-label">
-                  <span>
-                    Телефон
-                  </span>
-                  <input type="tel" name="tel" id="tel">
-                </label>
-                <label class="feedback__form-label">
-                  <span>
-                    Ваше сообщение
-                  </span>
-                  <textarea name="message" id="message"></textarea>
-                </label>
+              <div data-form-validate="data-form-validate">
+                <form class="feedback__form" action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
+                  <label class="feedback__form-label" data-validate-type="text"
+                    data-on-input-validate="data-on-input-validate" data-required="data-required">
+                    <span>
+                      Имя
+                    </span>
+                    <input type="text" name="name" required>
+                  </label>
 
-                <label class="feedback__form-label">
-                  <span>
-                    Выберите город
-                  </span>
-                  <div class="custom-select" data-select>
-                    <span class="custom-select__label"></span>
-                    <span class="custom-select__error"></span>
-                    <span class="custom-select__placeholder"></span>
-                    <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
-                      <span class="custom-select__text"></span>
-                      <span class="custom-select__icon">
-                        <!-- <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                          <path opacity="0.6" d="M11.455 3.81812L6.00044 8.72721L0.545898 3.81812" stroke="white" />
-                        </svg> -->
-                      </span>
-                    </button>
-                    <ul class="custom-select__list">
-                      <!-- <li class="custom-select__item active" tabindex="0" data-select-value="id-1"></li> -->
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-1">Санкт-Петербург</li>
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-2">Санкт-Петербург</li>
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-3">Санкт-Петербург</li>
-                      <li class="custom-select__item" tabindex="0" data-select-value="id-4">Санкт-Петербург</li>
-                    </ul>
-                  </div>
-                </label>
+                  <label class="feedback__form-label" data-validate-type="phone"
+                    data-on-input-validate="data-on-input-validate" data-required="data-required">
+                    <span>
+                      Телефон
+                    </span>
+                    <input type="tel" name="tel" required>
+                  </label>
 
-                <label class="feedback__form-label feedback__form-label--checkbox">
-                  <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
-                  <div class="feedback__custom-checkbox">
-                    <svg width="10" height="10">
-                      <use href="__spritemap#sprite-check"></use>
-                    </svg>
-                  </div>
-                  <span>
-                    Я согласен на обработку моих персональных данных
-                  </span>
-                </label>
-                <button class="feedback__form-button btn" type="submit">
-                  <span>Отправить</span>
-                  <div class="feedback__btn-wrapper btn__wrapper btn__wrapper--invert">
-                    <svg width="10" height="10">
-                      <use href="__spritemap#sprite-arrow-up"></use>
-                    </svg>
-                  </div>
-                </button>
-              </form>
+                  <label class="feedback__form-label" data-validate-type="text"
+                    data-on-input-validate="data-on-input-validate" data-required="data-required">
+                    <span>
+                      Ваше сообщение
+                    </span>
+                    <textarea name="message" id="message" required></textarea>
+                  </label>
+
+                  <label class="feedback__form-label">
+                    <span>
+                      Выберите город
+                    </span>
+                    <div class="custom-select feedback__form-select" data-select="data-select"
+                      data-validate-type="select" data-name="Город" data-message-base="Поле обязательно к заполнению">
+                      <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
+                        <span class="custom-select__text"></span>
+                        <span class="custom-select__icon"></span>
+                      </button>
+                      <ul class="custom-select__list">
+                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                        </li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                        </li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                        </li>
+                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                        </li>
+                      </ul>
+                    </div>
+                  </label>
+
+                  <label class="feedback__form-label feedback__form-label--checkbox" data-validate-type="checkbox"
+                    data-message-base="">
+                    <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
+                    <div class="feedback__custom-checkbox">
+                      <svg width="10" height="10">
+                        <use href="__spritemap#sprite-check"></use>
+                      </svg>
+                    </div>
+                    <span>
+                      Я согласен на обработку моих персональных данных
+                    </span>
+                  </label>
+                  <button class="feedback__form-button btn" type="submit">
+                    <span>Отправить</span>
+                    <div class="feedback__btn-wrapper btn__wrapper btn__wrapper--invert">
+                      <svg width="10" height="10">
+                        <use href="__spritemap#sprite-arrow-up"></use>
+                      </svg>
+                    </div>
+                  </button>
+                </form>
+              </div>
             </div>
           </div>
 
