--- a/source/index.html
+++ b/source/index.html
@@ -1301,67 +1301,72 @@
             <div class="feedback__form-container">
               <h2>Напишите нам</h2>
               <p>Оставьте ваши контакты, если у вас остались вопросы — мы на них ответим!</p>
-              <div data-form-validate="data-form-validate">
-                <form class="feedback__form" action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
-                  <label class="feedback__form-label" data-validate-type="text"
+              <div class="feedback__form" data-form-validate="data-form-validate">
+                <form action="https://echo.htmlacademy.ru/" autocomplete="off" method="post">
+                  <div class="feedback__form-label" data-validate-type="text"
                     data-on-input-validate="data-on-input-validate" data-required="data-required">
-                    <span>
-                      Имя
-                    </span>
-                    <input type="text" name="name" required>
-                  </label>
+                    <label>
+                      <span>
+                        Имя
+                      </span>
+                      <input type="text" name="name" required>
+                    </label>
+                  </div>
 
-                  <label class="feedback__form-label" data-validate-type="phone"
+                  <div class="feedback__form-label" data-validate-type="phone"
                     data-on-input-validate="data-on-input-validate" data-required="data-required">
-                    <span>
-                      Телефон
-                    </span>
-                    <input type="tel" name="tel" required>
-                  </label>
+                    <label>
+                      <span>
+                        Телефон
+                      </span>
+                      <input type="tel" name="tel" required>
+                    </label>
+                  </div>
 
-                  <label class="feedback__form-label" data-validate-type="text"
+                  <div class="feedback__form-label" data-validate-type="text"
                     data-on-input-validate="data-on-input-validate" data-required="data-required">
-                    <span>
-                      Ваше сообщение
-                    </span>
-                    <textarea name="message" id="message" required></textarea>
-                  </label>
+                    <label>
+                      <span>
+                        Ваше сообщение
+                      </span>
+                      <textarea name="message" id="message" required></textarea>
+                    </label>
+                  </div>
 
-                  <label class="feedback__form-label">
-                    <span>
-                      Выберите город
-                    </span>
-                    <div class="custom-select feedback__form-select" data-select="data-select"
-                      data-validate-type="select" data-name="Город" data-message-base="Поле обязательно к заполнению">
-                      <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
-                        <span class="custom-select__text"></span>
-                        <span class="custom-select__icon"></span>
-                      </button>
-                      <ul class="custom-select__list">
-                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
-                        </li>
-                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
-                        </li>
-                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
-                        </li>
-                        <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
-                        </li>
-                      </ul>
-                    </div>
-                  </label>
+                  <div class="custom-select feedback__form-select feedback__form-label" data-select="data-select"
+                    data-validate-type="select" data-name="Город" data-message-base="Поле обязательно к заполнению">
+                    <span>Выберите город</span>
+                    <button class="custom-select__button" type="button" aria-label="Выберите одну из опций">
+                      <span class="custom-select__text"></span>
+                      <span class="custom-select__icon"></span>
+                    </button>
+                    <ul class="custom-select__list">
+                      <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                      </li>
+                      <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                      </li>
+                      <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                      </li>
+                      <li class="custom-select__item" tabindex="0" data-select-value="Санкт-Петербург">Санкт-Петербург
+                      </li>
+                    </ul>
+                  </div>
 
-                  <label class="feedback__form-label feedback__form-label--checkbox" data-validate-type="checkbox"
+                  <div class="feedback__form-label feedback__form-label--checkbox" data-validate-type="checkbox"
                     data-message-base="">
-                    <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
-                    <div class="feedback__custom-checkbox">
-                      <svg width="10" height="10">
-                        <use href="__spritemap#sprite-check"></use>
-                      </svg>
-                    </div>
-                    <span>
-                      Я согласен на обработку моих персональных данных
-                    </span>
-                  </label>
+                    <label>
+                      <input class="visually-hidden feedback__default-checkbox" type="checkbox" name="agree" id="agree">
+                      <div class="feedback__custom-checkbox">
+                        <svg width="10" height="10">
+                          <use href="__spritemap#sprite-check"></use>
+                        </svg>
+                      </div>
+                      <span>
+                        Я согласен на обработку моих персональных данных
+                      </span>
+                    </label>
+                  </div>
+
                   <button class="feedback__form-button btn" type="submit">
                     <span>Отправить</span>
                     <div class="feedback__btn-wrapper btn__wrapper btn__wrapper--invert">
