Проходит ПП блок about

--- a/source/index.html
+++ b/source/index.html
@@ -287,12 +287,12 @@
               <li class="about__item">
                 <div class="about__item-wrapper">
                   <h4>Более 250 программ</h4>
-                  <p>учебных и рабочих, разной длительностью от 3 месяцев до 1 года</p>
+                  <p>учебных и рабочих, <br class="about__br-tablet">разной длительностью от 3 месяцев до 1 года</p>
                 </div>
 
               </li>
               <li class="about__item">
-                <div class="about__item-wrapper">
+                <div class="about__item-wrapper about__item-wrapper--diff-padding">
                   <h4>Более<br class="about__br-mobile"> 3000 участников</h4>
                   <p>уже успешно прошли программу
                     от «Стажировка» и остались в разных
@@ -310,7 +310,8 @@
                 <div class="about__item-wrapper">
                   <h4>участники
                     из 60 стран</h4>
-                  <p>студенты со всего мира приезжают на программу
+                  <p>студенты со всего<br class="about__br-tablet"> мира приезжают<br class="about__br-tablet">
+                    на программу
                     «Стажировка»</p>
                 </div>
               </li>
