Проходит ПП тесты feedback

--- a/source/index.html
+++ b/source/index.html
@@ -1324,7 +1324,7 @@
                     </label>
                   </div>
 
-                  <div class="feedback__form-label" data-validate-type="text"
+                  <div class="feedback__form-label feedback__form-label--textarea" data-validate-type="text"
                     data-on-input-validate="data-on-input-validate" data-required="data-required">
                     <label>
                       <span>
