Добавляет и правит состояния

--- a/source/index.html
+++ b/source/index.html
@@ -1455,16 +1455,6 @@
     </footer>
   </div>
 
-  <!-- <div data-test="about">about</div>
-  <div data-test="programs">programs</div>
-  <div data-test="grant">grant</div>
-  <div data-test="news">news</div>
-  <div data-test="FAQ">FAQ</div>
-  <div data-test="reviews">reviews</div>
-  <div data-test="contacts">contacts</div>
-  <div data-test="form">form</div>
-  <div data-test="footer">footer</div> -->
-
   <div class="overlay" data-burger="overlay"></div>
 
   <div class="modal modal--preload" data-modal="modal-main">
@@ -1537,7 +1527,7 @@
 
             <button class="modal__form-button btn" type="submit">
               <span>Отправить</span>
-              <div class="modal__btn-wrapper btn__wrapper btn__wrapper--invert">
+              <div class="modal__btn-wrapper btn__wrapper">
                 <svg width="10" height="10">
                   <use href="__spritemap#sprite-arrow-up"></use>
                 </svg>
