--- a/source/index.html
+++ b/source/index.html
@@ -582,7 +582,7 @@
           <div class="news__slider-wrapper swiper" data-slider="news-slider">
             <ul class="news__slider swiper-wrapper">
               <li class="news__slider-slide news__slider-slide--wide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/persons-desktop.webp 1x, img/news/persons-desktop@2x.webp 2x" width="" height="">
@@ -614,7 +614,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/sea-desktop.webp 1x, img/news/sea-desktop@2x.webp 2x" width="" height="">
@@ -646,7 +646,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/volunteer-desktop.webp 1x, img/news/volunteer-desktop@2x.webp 2x" width=""
@@ -682,7 +682,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/computers-desktop.webp 1x, img/news/computers-desktop@2x.webp 2x" width=""
@@ -718,7 +718,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/sea-desktop.webp 1x, img/news/sea-desktop@2x.webp 2x" width="" height="">
@@ -750,7 +750,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/volunteer-desktop.webp 1x, img/news/volunteer-desktop@2x.webp 2x" width=""
@@ -786,7 +786,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/computers-desktop.webp 1x, img/news/computers-desktop@2x.webp 2x" width=""
@@ -822,7 +822,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/computers-desktop.webp 1x, img/news/computers-desktop@2x.webp 2x" width=""
@@ -858,7 +858,7 @@
               </li>
 
               <li class="news__slider-slide swiper-slide">
-                <div class="new__img-container">
+                <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
                       srcset="img/news/computers-desktop.webp 1x, img/news/computers-desktop@2x.webp 2x" width=""
@@ -1076,19 +1076,19 @@
             <ul class="reviews__list swiper-wrapper">
               <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
-                  <div class="rewievs__item-user">
+                  <div class="reviews__item-user">
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <div class="rewiews__item-name-container">
+                    <div class="reviews__item-name-container">
                       <p>Лола</p>
                       <p>Алекс</p>
                     </div>
                   </div>
                   <div class="reviews__item-data">
-                    <div class="revievs__item-program">
+                    <div class="reviews__item-program">
                       <h3>Программа</h3>
                       <p>Masa Art Challenge</p>
                     </div>
@@ -1109,19 +1109,19 @@
               </li>
               <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
-                  <div class="rewievs__item-user">
+                  <div class="reviews__item-user">
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <div class="rewiews__item-name-container">
+                    <div class="reviews__item-name-container">
                       <p>Давид</p>
                       <p>Иванов</p>
                     </div>
                   </div>
                   <div class="reviews__item-data">
-                    <div class="revievs__item-program">
+                    <div class="reviews__item-program">
                       <h3>Программа</h3>
                       <p>Volunteer Chance</p>
                     </div>
@@ -1142,19 +1142,19 @@
               </li>
               <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
-                  <div class="rewievs__item-user">
+                  <div class="reviews__item-user">
                     <picture>
                       <source type="image/webp" srcset="img/reviews/lola.webp 1x, img/reviews/lola@2x.webp 2x">
                       <img src="img/reviews/lola.png" srcset="img/reviews/lola@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <div class="rewiews__item-name-container">
+                    <div class="reviews__item-name-container">
                       <p>Лола</p>
                       <p>Алекс</p>
                     </div>
                   </div>
                   <div class="reviews__item-data">
-                    <div class="revievs__item-program">
+                    <div class="reviews__item-program">
                       <h3>Программа</h3>
                       <p>Masa Art Challenge</p>
                     </div>
@@ -1175,19 +1175,19 @@
               </li>
               <li class="reviews__item swiper-slide">
                 <div class="reviews__item-header">
-                  <div class="rewievs__item-user">
+                  <div class="reviews__item-user">
                     <picture>
                       <source type="image/webp" srcset="img/reviews/david.webp 1x, img/reviews/david@2x.webp 2x">
                       <img src="img/reviews/david.png" srcset="img/reviews/david@2x.png 2x" width="90" height="90"
                         alt="Позьзователь." />
                     </picture>
-                    <div class="rewiews__item-name-container">
+                    <div class="reviews__item-name-container">
                       <p>Давид</p>
                       <p>Иванов</p>
                     </div>
                   </div>
                   <div class="reviews__item-data">
-                    <div class="revievs__item-program">
+                    <div class="reviews__item-program">
                       <h3>Программа</h3>
                       <p>Volunteer Chance</p>
                     </div>
@@ -1238,7 +1238,7 @@
         <div class="container contacts__container">
           <div class="contacts__text-container">
             <h2>Контакты</h2>
-            <ul class="contact__list">
+            <ul class="contacts__list">
               <li class="contacts__item">
                 <h3>Центральный офис</h3>
                 <p>г. Новосибирск, ул. Щетинкина 68, культурный центр</p>
