Правит слайдер news - до этого не переключал слайды на мобильном

--- a/source/index.html
+++ b/source/index.html
@@ -734,7 +734,7 @@
                       srcset="img/news/sea-desktop.webp 1x, img/news/sea-desktop@2x.webp 2x" width="286" height="400">
                     <source type="image/webp" media="(min-width: 768px)"
                       srcset="img/news/sea-tablet.webp 1x, img/news/sea-tablet@2x.webp 2x" width="324" height="350">
-                    <source type="image/webp" srcset="img/news/sea-mobile.webp 1x, img/news/persons-mobile@2x.webp 2x"
+                    <source type="image/webp" srcset="img/news/sea-mobile.webp 1x, img/news/sea-mobile@2x.webp 2x"
                       width="290" height="240">
                     <source type="image/jpeg" media="(min-width: 1440px)"
                       srcset="img/news/sea-desktop.jpg 1x, img/news/sea-desktop@2x.jpg 2x" width="286" height="400">
@@ -870,7 +870,7 @@
                 </div>
               </li>
 
-              <li class="news__slider-slide swiper-slide">
+              <!-- <li class="news__slider-slide swiper-slide">
                 <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
@@ -905,7 +905,7 @@
                     </div>
                   </a>
                 </div>
-              </li>
+              </li> -->
             </ul>
 
             <div class="swiper-pagination news__slider-pagination" data-slider="news-slider-pgn"></div>
