--- a/source/index.html
+++ b/source/index.html
@@ -252,8 +252,6 @@
                 </div>
               </li>
             </ul>
-            <!-- <div class="swiper-pagination hero__pagination" data-slider="hero-slider-pgn">
-            </div> -->
           </div>
         </section>
       </div>
@@ -320,7 +318,7 @@
         </div>
       </section>
 
-      <section class="programs" data-test="programs">
+      <section class="programs" data-test="programs" id="programs">
         <div class="container programs__title-container">
           <h2>Программы</h2>
           <a class="programs__link programs__link--large btn" href="#">Все программы
@@ -334,7 +332,7 @@
         <div class="programs__slider-container">
           <div class="programs__slider swiper" data-slider="programs-slider">
             <ul class="programs__list swiper-wrapper">
-              <li class="programs__item swiper-slide" id="internship">
+              <li class="programs__item swiper-slide">
                 <div class="programs__item-img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
@@ -560,7 +558,7 @@
         </div>
       </section>
 
-      <section class="news" data-test="news">
+      <section class="news" data-test="news" id="news">
         <div class="container news__container">
           <h2>Новости и материалы</h2>
           <div class="news__tab-list-container">
@@ -870,7 +868,7 @@
                 </div>
               </li>
 
-              <!-- <li class="news__slider-slide swiper-slide">
+              <li class="news__slider-slide swiper-slide news__slider-slide--no-mobile">
                 <div class="news__img-container">
                   <picture>
                     <source type="image/webp" media="(min-width: 1440px)"
@@ -905,7 +903,7 @@
                     </div>
                   </a>
                 </div>
-              </li> -->
+              </li>
             </ul>
 
             <div class="swiper-pagination news__slider-pagination" data-slider="news-slider-pgn"></div>
@@ -953,13 +951,8 @@
                   </div>
                 </div>
                 <div data-accordion="content">
-                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi neque nulla, blanditiis molestiae
-                    veritatis libero nostrum quos, corrupti atque facilis nesciunt odit ducimus vel deleniti tempore
-                    fugit, fuga enim sequi.
-                    Corporis eos blanditiis deserunt optio alias, sint ab ipsam adipisci incidunt aut illo recusandae
-                    odio
-                    quibusdam quas modi quaerat doloribus facere officia cumque, numquam voluptas sit ex beatae nisi?
-                    Voluptas!</p>
+                  <p>Организатором программы является проект “Маса” в сотрудничестве с образовательными учреждениями.
+                    Сроки программы обмена могут варьироваться от одного семестра до года.</p>
                 </div>
               </div>
             </li>
@@ -980,16 +973,8 @@
                   </div>
                 </div>
                 <div data-accordion="content">
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus aliquam voluptates totam
-                    suscipit! Id, nobis nam porro aut nemo, neque vel quas dignissimos, obcaecati amet facilis quis quos
-                    illo quasi?
-                    Consequatur quis dicta praesentium. Corporis voluptas enim inventore laudantium cumque quidem
-                    molestias modi alias distinctio, nostrum harum dolore maiores rerum magni architecto. Enim
-                    aspernatur
-                    eligendi libero eius minus. Laborum, sint.
-                    Esse necessitatibus omnis modi animi quibusdam voluptates, rem pariatur nemo, optio illum veniam
-                    sequi
-                    repellat fuga, non natus quos nulla a ut impedit dolores atque? Veniam ea expedita reprehenderit ut.
+                  <p>Грант на обучение - это финансовая поддержка, которую предоставляет организатор программы обмена
+                    студентами для оплаты учебных расходов.
                   </p>
                 </div>
               </div>
@@ -1035,14 +1020,10 @@
                   </div>
                 </div>
                 <div data-accordion="content">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque earum eos nam dolore sunt, odit sed
-                    itaque commodi molestiae quasi ea est sapiente exercitationem aspernatur voluptatum deleniti magnam
-                    vitae quisquam!
-                    Animi vel ullam quo numquam omnis natus vero doloribus ad nihil! Nostrum animi vitae aliquid quaerat
-                    nisi nam, itaque ut fugit maxime? Qui omnis dolores odio dolore pariatur impedit accusamus.
-                    Cumque adipisci quam dolor consequatur alias obcaecati corporis veniam. Eaque quaerat, deleniti
-                    cupiditate, aspernatur sint maxime similique nulla suscipit id possimus nemo ipsum molestias aperiam
-                    laboriosam magni quis nam quae?</p>
+                  <p>Студенты, участвующие в проекте, могут использовать полученные знания и навыки в своей будущей
+                    профессиональной деятельности или продолжить обучение в высших учебных заведениях. Кроме того,
+                    многие университеты и
+                    колледжи предоставляют кредиты за участие в программе обмена студентами.</p>
                 </div>
               </div>
             </li>
@@ -1063,19 +1044,13 @@
                   </div>
                 </div>
                 <div data-accordion="content">
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus ex, fugit vero non magnam dolor
-                    itaque deleniti, eligendi pariatur alias sunt assumenda id deserunt, quisquam culpa. Laborum nihil
-                    porro praesentium.
-                    Eveniet, eligendi sit accusantium ipsa earum ex molestias impedit assumenda facere corporis aliquam,
-                    tempora perferendis aut labore tempore quae sint voluptatum non quos? Dicta dolorem error excepturi,
-                    quis quos possimus.
-                    Doloribus, reprehenderit temporibus hic dolore nulla nam vitae animi excepturi optio earum
-                    consectetur
-                    ipsum veritatis, quam repellendus fugit maiores provident quasi sequi. Reprehenderit, similique sed?
-                    Cum nemo et temporibus eius?
-                    Labore illum at totam in. Dolorem culpa quaerat possimus ea eos commodi. Quibusdam dicta numquam
-                    obcaecati ad, vel officiis tempora eveniet quo at, laborum aut voluptate pariatur nemo inventore
-                    similique?</p>
+                  <p>Процесс регистрации на программу обмена включает выбор университета-партнера и программы обмена,
+                    общение с координатором
+                    программы, заполнение заявления и предоставление необходимых документов, прохождение интервью,
+                    оформление визы, жилья и
+                    страховки, обучение по безопасности за границей и подписание договора об участии в программе.
+                    Подробнее можно узнать
+                    позвонив в центр.</p>
                 </div>
               </div>
             </li>
@@ -1247,7 +1222,6 @@
             </div>
           </div>
         </div>
-
       </section>
 
       <section class="contacts" data-test="contacts" id="contacts">
@@ -1411,32 +1385,32 @@
           <nav class="footer__nav">
             <ul class="footer-list">
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#about">
                   О проекте
                 </a>
               </li>
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#programs">
                   Программы
                 </a>
               </li>
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#grant">
                   Как поехать
                 </a>
               </li>
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#reviews">
                   Отзывы
                 </a>
               </li>
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#news">
                   Новости
                 </a>
               </li>
               <li class="footer-list__item">
-                <a href="#">
+                <a href="#contacts">
                   Контакты
                 </a>
               </li>
@@ -1445,17 +1419,17 @@
         </div>
 
         <div class="footer__socials">
-          <a href="#" aria-label="Мы в Вконтакте">
+          <a href="#" aria-label="Мы в Вконтакте" target="_blank" rel="noreferrer noopener">
             <svg width="16" height="16">
               <use href="__spritemap#sprite-vk"></use>
             </svg>
           </a>
-          <a href="#" aria-label="Мы в Одноклассники">
+          <a href="#" aria-label="Мы в Одноклассники" target="_blank" rel="noreferrer noopener">
             <svg width="16" height="16">
               <use href="__spritemap#sprite-odnoklassniki"></use>
             </svg>
           </a>
-          <a href="#" aria-label="Мы на Реддит">
+          <a href="#" aria-label="Мы на Реддит" target="_blank" rel="noreferrer noopener">
             <svg width="16" height="16">
               <use href="__spritemap#sprite-reddit"></use>
             </svg>
